completed initial css grid layout, still experimenting with fixed header overlapping content on scroll

--- a/main.css
+++ b/main.css
@@ -1,70 +1,107 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em;
-  font-height: 1.5;
-  padding: 0;
-  margin: 0;
-  background-color: #8e7779;
+* {
+  border: black solid 2px;
+  font-family: sans-serif, arial;
+
 }
 
-/* Global */
+body {
+
+
+}
+
+
+
 .container {
-  width: 80%;
-  margin: auto;
-  overflow: hidden;
+display: grid;
+grid-template-columns: repeat(9, 1fr);
+grid-template-rows: auto;
+grid-template-areas:
+/*"header header header header header header header header header"*/
+
+". . main main main main main . ."
+". . . quote quote quote . . ."
+". intro intro intro intro intro intro intro ."
+"lifts lifts lifts lifts lifts lifts lifts lifts lifts"
+". . . closing closing closing . . ."
+". . footer footer footer footer footer . .";
 }
 
 /* Header */
 header {
-  display: block;
-  position: relative;
-  /* background: #3e3838; */
-  background:url("http://www.powerlifting-ipf.com/fileadmin/_processed_/csm_rz_head_start_2_c625724c07.jpg") no-repeat -170px -550px;
-  padding-top: 30px;
-  min-height: 70px;
-  border-bottom: #740000 7px solid;
-  color: #740000;
-  text-shadow: 1px 1px 20px #ffeff0;
-
+position: sticky;
+top:0;
+box-sizing: border-box;
+width: 100%;
+display: grid;
+grid-template-columns: 2fr 6fr 1fr;
+background-image:url(http://www.powerlifting-ipf.com/fileadmin/_processed_/csm_rz_head_start_2_c625724c07.jpg);
+background-position: 0px -450px;
 }
 
-header a {
-  color: #740000;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 20px;
+header .logo {
+text-align: center;
 }
 
-header a:active {
-  text-shadow: 1px 1px #8d0000;
-}
-
-header a:hover {
-  font-weight: bold;
-}
-
-header ul {
-  margin: 0;
-  padding: 0;
+header nav ul{
   float: right;
+}
+
+header nav li{
+display: inline;
+text-align: right;
+padding: 10px;
+}
+
+/* Main Content */
+
+.main {
+grid-area: main;
+text-align: center;
+}
+
+h1 {
+  text-align: center;
+}
+
+.quote {
+grid-area: quote;
+}
+
+#intro {
+  grid-area: intro;
+
 
 }
 
-header li {
-  display: inline;
-  float: left;
-  padding: 0 30px 0 30px;
+#lifts {
+grid-area: lifts;
+display: grid;
+grid-template-columns: repeat(3, 1fr);
+grid-gap: 10px;
+text-align: justify;
 }
 
-header li:hover{}
-
-
-
-/* Body */
-.box {
-  box-shadow: 3px 3px 5px black;
+#lifts h3 {
+  text-align: center;
 }
 
-.box:hover {
-   box-shadow: 3px 3px 5px black, 10px 10px 10px white;
+#more-info {
+grid-area: closing;
+text-align: justify;
+}
+
+#about-me {
+grid-area: footer;
+text-align: center;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  margin: auto;
+  object-fit: contain;
+}
+
+h4 {
+  text-align: right;
 }
